fixed alignment

--- a/app/assets/stylesheets/components/_index-billboard.scss
+++ b/app/assets/stylesheets/components/_index-billboard.scss
@@ -9,6 +9,7 @@
   justify-content: flex-start;
   align-items: center;
   align-content: stretch;
+  margin: 20px 0 auto;
 }
 
 .index-item {
