--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -92,7 +92,9 @@
   width: 85vw;
   padding-right: 120px;
   text-align: center;
-  margin: 0 auto;
+  margin-left: 0;
+  margin-right: 0;
+  // margin: 0 auto;
   margin-bottom: 20px;
 
   form {
